# idiom

./: .gitignore  DEVELOPING.md  LICENSE  Makefile.am  README.md  config.h.in  configure.ac
data/: Makefile.am  org.bitptr.idiom.desktop.in
data/icons/: idiom.xcf
data/icons/hicolor/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/256x256/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/8x8/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
man/: Makefile.am
man/man1/: idiom.1
share/idiom/: Makefile.am  idiom.ui
src/: Makefile.am  compat.c  compat.h  main.c  pathnames.h
